# rnn-t

./: pyproject.toml
.claude/: settings.local.json
config/: default.yaml
data/: vocab.json
emg_data/closed_vocab/voiced/5-19/: 598_info.json
emg_data/voiced_parallel_data/5-4/: 0_info.json  1_info.json
emg_data/voiced_parallel_data/5-5/: 214_info.json
scripts/: debug_alignments.py  debug_dataset.py  download_data.sh  inspect_gaddy.py  load_gaddy.py  setup_ec2.sh  test_pipeline.py  train_all.py  train_with_gaddy.py
src/: __init__.py
src/data/: __init__.py  alignment.py  dataset.py  preprocessing.py
src/inference/: __init__.py  export.py  streaming.py
src/model/: __init__.py  encoder.py  gaddy_encoder.py  joiner.py  predictor.py  transducer.py
src/training/: __init__.py  ctc_train.py  rnnt_train.py  silent_adapt.py
src/utils/: __init__.py  losses.py  metrics.py  s3.py
